--- a/mobs.html
+++ b/mobs.html
@@ -8,7 +8,7 @@
      	<div class="het">
      		<a href="index.html">Главная</a>
      		<a href="">Миры</a>
-     		<a href="">Биомы</a>
+     		<a href="bioms.html">Биомы</a>
      		<a href="">Мобы</a>
      	</div>
  
