--- a/bioms.html
+++ b/bioms.html
@@ -18,5 +18,46 @@
 	<div class="promo">
 		<div class="promo_text">Биомы</div>
 	</div>
+
+	<div class="info">
+		<h2>Описание</h2>
+		<p>Далеко-далеко за словесными горами в стране гласных, и согласных, живут рыбные тексты. Которое, взгляд всеми там деревни оксмокс текст ее мир вскоре первую лучше запятой составитель необходимыми реторический снова ты на берегу буквенных.
+		Пустился жизни взобравшись рот деревни бросил предупреждал буквоград букв предупредила образ страну власти всеми моей подпоясал заманивший алфавит журчит текстами, продолжил заголовок себя он силуэт, вершину, речью. Живет, ее, вскоре!</p>
+	
+
+<h2>Биомы верхниго мира</h2>
+
+
+<div class="info_box">
+	<img src="boloto.jpg" alt="">
+	<div class="info_box_text">
+		<h3>Болото</h3>
+		<p>Болото (англ. Swamp) — умеренный биом, представляющий собой плоскую местность, затопленную водой до уровня моря. Болото генерируется около любого умеренного биома, зачастую рядом с обычным, тёмным лесом, березняком и равнинами. В Minecraft сейчас есть два вида болота — обычное и мангровое.</p>
+		<p>Болото представляет собой плоскую местность, затопленную водой до уровня моря. На поверхности болотная вода имеет серо-зелёный цвет, на глубине — бледно-жёлтый. Часто около воды генерируется сахарный тростник; на её поверхности — кувшинки; на дне — скопления глины и морской травы. На сухих и затопленных участках болота встречаются дубы, покрытые лианами. Кроме того, в болоте можно найти грибы, синие орхидеи, траву, а также ископаемые останки и хижины ведьм; в Bedrock Edition — огромные грибы.</p>
+		<p>Мангровые болота — это вариант болотного биома, который генерируется в более теплых регионах, обычно рядом с джунглями и пустынями . Растительность в этом биоме очень густая, с большим количеством мангровых деревьев, которые сильно различаются по высоте. Как нижняя часть мангровых деревьев генерируются мангровые корни, которые могут быть погружены в воду. На деревьях же много мшистого покрова.</p>
+	</div>
+
+</div>
+<div class="info_box">
+	<img src="t.jpg" alt="">
+	<div class="info_box_text">
+		<h3>Моголетняя Тайга</h3>
+		<p>Многолетняя тайга (англ. Old Growth Taiga) — холодный биом, представляющий собой гигантский хвойный лес. Многолетняя тайга генерируется только в обычной тайге. В Minecraft есть два варианта этого биома — сосновый и еловый.</p>
+		<p>Многолетняя сосновая тайга представляет собой гигантский хвойный лес. В отличие от обычной тайги, поверхность многолетней состоит преимущественно из подзола и каменистой земли, а размер многих её елей схож с размером джунглевых деревьев — они в четыре раза шире и могут достигать высоты 30 блоков. Помимо деревьев, в этом биоме можно найти грибы, кусты сладких ягод, сухие кусты, траву, цветы, а также замшелые валуны и озёра.</p>
+		<p>В Minecraft есть два вида многолетней тайги — сосновая и еловая. Эти виды генерируются в обычной тайге. Между подзолистой тайгой и другим биомом, за исключением заснеженной тайги, всегда генерируются бесснежная тайга для плавного перехода между биомами.</p>
+	</div>
+</div>
+
+<div class="info_box">
+	<img src="g.jpg" alt="">
+	<div class="info_box_text">
+		<h3>Грибной биом</h3>
+		<p>Грибные поля (англ. Mushroom Fields) — умеренный биом, часто представляющий собой океанический остров, заросший грибами.</p>
+		<p>Грибные поля представляют собой океанический остров, заросший грибами. В отличие от других биомов, поверхность этого биома состоит из мицелия. Помимо грибов, в грибных полях можно найти небольшие озёра; на побережье — затонувшие корабли и клады. Редко через этот биом протекают реки. Грибные поля отличаются холмистым рельефом, побережье — плоским.</p>
+		<p>Грибное побережье — технический биом, представляющий собой мицелиевый пляж. Грибное побережье генерируется на уровне моря между грибными полями и рекой или неглубоким океаном и используются игрой для плавного перехода суши к воде. Если грибные поля сгенерируются около глубокого океана, то между ними будет крутой утёс. Сухая часть грибного побережья состоит из мицелия, мокрая — из глины, земли и песка.</p>
+	</div>
+</div>
+
+</div>
 </body>
 </html>
